Fixed issue with gap between header and page content

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
   height: 100%;
   border-color: white;
-  padding-top: 70px;
+  padding-top: 55px;
 }
 
 .App-title {
